--- a/module_6/styles.css
+++ b/module_6/styles.css
@@ -5,6 +5,12 @@ ul {
   list-style: none;
 } */
 
-.img {
+/* .img {
   width: 300px;
+} */
+
+.container {
+  width: 100px;
+  height: 100px;
+  background: violet;
 }
